make entity use the model JobStatus to keep it simple